[gd_scene load_steps=15 format=2]

[ext_resource path="res://Assets/Food/Tomato.png" type="Texture" id=1]
[ext_resource path="res://Assets/Food/Onion.png" type="Texture" id=2]
[ext_resource path="res://Assets/Food/Ham.png" type="Texture" id=3]
[ext_resource path="res://Assets/Food/Lettuce.png" type="Texture" id=4]
[ext_resource path="res://Backgrounds/kitchen_v01_closeup_Sandwich__01.png" type="Texture" id=5]
[ext_resource path="res://Scripts/BuildSandwich.gd" type="Script" id=6]
[ext_resource path="res://Assets/Food/IceCream.png" type="Texture" id=7]
[ext_resource path="res://Assets/Food/Bottle.png" type="Texture" id=8]
[ext_resource path="res://Assets/Food/Banana.png" type="Texture" id=9]
[ext_resource path="res://Assets/Food/Pizza.png" type="Texture" id=10]
[ext_resource path="res://Assets/Food/Fish.png" type="Texture" id=11]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 168, 208 )

[sub_resource type="StreamTexture" id=2]
flags = 4

[sub_resource type="StreamTexture" id=3]
flags = 4

[node name="Node2D" type="Node2D"]
__meta__ = {
"_edit_lock_": true
}

[node name="kitchen_layout_a_plateandbox_static" type="Sprite" parent="."]
position = Vector2( 512, 294 )
scale = Vector2( 0.533333, 0.537037 )
texture = ExtResource( 5 )
__meta__ = {
"_edit_lock_": true
}

[node name="ReturnBut" type="Button" parent="."]
margin_left = 880.0
margin_top = 16.0
margin_right = 1003.0
margin_bottom = 36.0
text = "Return to Kitchen"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Complete" type="Button" parent="."]
margin_left = 872.0
margin_top = 536.0
margin_right = 1009.0
margin_bottom = 556.0
text = "Complete Sandwich"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SandwichBuilder" type="StaticBody2D" parent="."]
script = ExtResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="SandwichBuilder"]
position = Vector2( 504, 280 )
shape = SubResource( 1 )

[node name="Sandwich Buttons" type="Node" parent="."]

[node name="Bread" type="Button" parent="Sandwich Buttons"]
margin_left = 56.0
margin_top = 56.0
margin_right = 128.0
margin_bottom = 80.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "0"
icon = SubResource( 2 )
flat = true
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Cheese" type="Button" parent="Sandwich Buttons"]
margin_left = 160.0
margin_top = 56.0
margin_right = 232.0
margin_bottom = 80.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "0"
icon = SubResource( 3 )
flat = true
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Ham" type="Button" parent="Sandwich Buttons"]
margin_left = 56.0
margin_top = 112.0
margin_right = 128.0
margin_bottom = 136.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "0"
icon = ExtResource( 3 )
flat = true
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Lettuce" type="Button" parent="Sandwich Buttons"]
margin_left = 160.0
margin_top = 112.0
margin_right = 232.0
margin_bottom = 136.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "0"
icon = ExtResource( 4 )
flat = true
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Onion" type="Button" parent="Sandwich Buttons"]
margin_left = 56.0
margin_top = 168.0
margin_right = 128.0
margin_bottom = 192.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "0"
icon = ExtResource( 2 )
flat = true
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tomato" type="Button" parent="Sandwich Buttons"]
margin_left = 160.0
margin_top = 168.0
margin_right = 232.0
margin_bottom = 192.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "0"
icon = ExtResource( 1 )
flat = true
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="IceCream" type="Button" parent="Sandwich Buttons"]
margin_left = 56.0
margin_top = 224.0
margin_right = 128.0
margin_bottom = 248.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "0"
icon = ExtResource( 7 )
flat = true
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Banana" type="Button" parent="Sandwich Buttons"]
margin_left = 160.0
margin_top = 224.0
margin_right = 232.0
margin_bottom = 248.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "0"
icon = ExtResource( 9 )
flat = true
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Fish" type="Button" parent="Sandwich Buttons"]
margin_left = 56.0
margin_top = 280.0
margin_right = 128.0
margin_bottom = 304.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "0"
icon = ExtResource( 11 )
flat = true
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Pizza" type="Button" parent="Sandwich Buttons"]
margin_left = 160.0
margin_top = 280.0
margin_right = 232.0
margin_bottom = 304.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "0"
icon = ExtResource( 10 )
flat = true
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bottle" type="Button" parent="Sandwich Buttons"]
margin_left = 56.0
margin_top = 328.0
margin_right = 128.0
margin_bottom = 352.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "0"
icon = ExtResource( 8 )
flat = true
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="ReturnBut" to="SandwichBuilder" method="_on_ReturnBut_pressed"]
[connection signal="pressed" from="Complete" to="SandwichBuilder" method="_on_Complete_pressed"]
[connection signal="pressed" from="Sandwich Buttons/Bread" to="SandwichBuilder" method="_on_Bread_pressed"]
[connection signal="pressed" from="Sandwich Buttons/Cheese" to="SandwichBuilder" method="_on_Cheese_pressed"]
[connection signal="pressed" from="Sandwich Buttons/Ham" to="SandwichBuilder" method="_on_Ham_pressed"]
[connection signal="pressed" from="Sandwich Buttons/Lettuce" to="SandwichBuilder" method="_on_Lettuce_pressed"]
[connection signal="pressed" from="Sandwich Buttons/Onion" to="SandwichBuilder" method="_on_Onion_pressed"]
[connection signal="pressed" from="Sandwich Buttons/Tomato" to="SandwichBuilder" method="_on_Tomato_pressed"]
[connection signal="pressed" from="Sandwich Buttons/IceCream" to="SandwichBuilder" method="_on_IceCream_pressed"]
[connection signal="pressed" from="Sandwich Buttons/Banana" to="SandwichBuilder" method="_on_Banana_pressed"]
[connection signal="pressed" from="Sandwich Buttons/Fish" to="SandwichBuilder" method="_on_Fish_pressed"]
[connection signal="pressed" from="Sandwich Buttons/Pizza" to="SandwichBuilder" method="_on_Pizza_pressed"]
[connection signal="pressed" from="Sandwich Buttons/Bottle" to="SandwichBuilder" method="_on_Bottle_pressed"]
